<resources>
    <string name="please_wait">Please wait</string>
    <string name="app_name">Napoleon</string>
    <string-array name="gps_send_interval">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
        <item>110</item>
        <item>120</item>
    </string-array>
    <string-array name="warehouse_column_values">
    	<item>No</item>
    	<item>Quantity in stock</item>
    	<item>Quantity per document</item> 
    	<item>Price</item>
    	<item>Amount in document</item>
    	<item>Qty Price/Order</item>
    	<item>Price/Amount in the order</item>
    	<item>Number of prices (nesting)</item>
    	</string-array>
    <string-array name="wh_find_choices">
        <item>Name</item>
        <item>Code</item>
    </string-array>
    <string-array name="print_src">
        <item>HP</item>
        <item>Samsung</item>
    </string-array>
    <string-array name="DiscountItems">
	<item>discount</item>
	<item>margin</item>
    </string-array>
    <string-array name="on_line_items">
        <item >IP 1</item>
        <item >IP 2</item>
        <item >no</item>
    </string-array>
    <string-array name="presentation_column_values">
        <item>Auto</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="day_to_del_visit">
        <item>7</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>360</item>
    </string-array>
    <string-array name="months_to_recreate">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="nav_type_items">
        <item>Classical</item>
        <item>New</item>
    </string-array>
    <string name="copy_doesnt_allow">Document copying is not allowed</string>
    <string name="init_camera_error">An error occurred while initializing the camera, the camera on this device may not be available or not working.</string>
    <string name="id">code</string>
    <string name="cost_changing">Price change</string>
    <string name="check_for_valid_number">Check if the number entered is correct</string>
    <string name="date_filter">filter from %1$d.%2$d.%3$d til %4$d.%5$d.%6$d</string>
    <string name="docs">Documents</string>
    <string name="send">Send</string>
    <string name="filter_by_date">Filter by date</string>
    <string name="gpscoord_is_old">The last taken coordinates are considered obsolete, press \"take coordinates\" to update"</string>
    <string name="remark">Note</string>
    <string name="client_in_stop_list">The client is on the stop list!</string>
    <string name="order_cant_processing">The application may not be processed.</string>
    <string name="inform">Contact Information</string>
    <string name="allow_crete_doc_without_gps">The time to receive the coordinates has expired, you can create a document without determining the location.</string>
    <string name="gps_received">"Coordinates received successfully, you can create a document"</string>
    <string name="new_doc">New document</string>
    <string name="note">Note</string>
    <string name="action">Action</string>
    <string name="open">Open</string>
    <string name="comment">Comment</string>
    <string name="error">Error</string>
    <string name="error_processing">Processing error</string>
    <string name="doc_save_error">The document is not completely saved</string>
    <string name="doc_process_succs">Document successfully completed</string>
    <string name="question">Question</string>
    <string name="ask_to_resend">The document has been processed. Do you want to send it again?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="value">Value</string>
    <string name="input_value">Enter value</string>
    <string name="check_input">Check if the number entered is correct</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_by_date">Delete by date</string>
    <string name="confirm">Confirmation</string>
    <string name="delete_all_messages">Delete all received messages?</string>
    <string name="caption">Title</string>
    <string name="visit">Visit</string>
    <string name="doc_list">List of documents</string>
    <string name="msg_list">List of messages</string>
    <string name="price_list">Price list</string>
    <string name="setting">Setting</string>
    <string name="recieve_remains">Download Stocks</string>
    <string name="sync">Synchronization</string>
    <string name="add_org">Add a potential client</string>
    <string name="about">About the program</string>
	<string name="exit">Exit</string>
    <string name="menu">Menu</string>
    <string name="ask_to_exit">To exit the program, select Menu -> Exit</string>
    <string name="order_required_price">Order a focus item!</string>
    <string name="required_price_ordered">Focus item ordered</string>
    <string name="need_to_order_all_required_price">You must order all the focus items!</string>
    <string name="necessary">Necessary!</string>
    <string name="add">Add</string>
    <string name="lines">Lines</string>
    <string name="shortlatitude">w</string>
    <string name="shortlongitude">l</string>
    <string name="ask_to_valid_data">Insufficient data, check if all required data is entered</string>
    <string name="impossible_get_gps">Unable to capture coordinates</string>
    <string name="gps_recieved_succs">Current coordinates received successfully</string>
    <string name="wait_for_current_location">Getting the current coordinates...</string>
    <string name="new_contact">New Contact</string>
    <string name="cost">Price</string>
	<string name="cost1">price</string>
    <string name="warning">Warning</string>
    <string name="qty_has_been_reduced">Quantity in order reduced</string>
    <string name="select_price">Choose item</string>
    <string name="select_folder">Choose</string>
    <string name="general">Main</string>
    <string name="photo">Photo</string>
    <string name="network">Network</string>
    <string name="price">Price</string>
    <string name="settings">Settings</string>
    <string name="input_password">Enter password</string>
    <string name="save_setting">Save settings</string>
    <string name="load_setting">Load settings</string>
    <string name="export_base">Export base</string>
    <string name="import_base">Import base</string>
    <string name="file_save_succs">File saved successfully</string>
    <string name="file_save_error">Error saving file</string>
    <string name="setting_has_been_read_succs">Settings read successfully</string>
    <string name="setting_load_error">Error loading settings</string>
    <string name="sync_end_traffic">"Synchronization completed\nTraffic: "</string>
	<string name="kB">" kB"</string>
    <string name="recieved_error">Receive error</string>
    <string name="use_sync_later">Unable to sync. &lt;br>Please try again in 2 minutes...</string>
    <string name="over_limit_photo">Exceeded photo limit per visit</string>
    <string name="all_price">All price</string>
    <string name="input_qty">Enter Quantity</string>
    <string name="disable_zero_filter">Disable Zero Position Filter</string>
    <string name="enable_zero_filter">Zero position filter</string>
    <string name="show_folder">Show folders</string>
    <string name="show_price">Show items</string>
    <string name="setting_clmns">Margin customization</string>
    <string name="select_matrix">Select matrix</string>
    <string name="price_loading">Price is loading...</string>
    <string name="sum">Sum</string>
    <string name="doc_error">Document error</string>
    <string name="ask_to_delete_doc">Remove document?</string>
    <string name="doc_not_sent">ATTENTION! Document not uploaded to server, delete?</string>
    <string name="processing_error">Processing error</string>
    <string name="answers">Answers</string>
    <string name="name">Name</string>
    <string name="title">Name</string>
    <string name="qty">Qty</string>
    <string name="wait">Wait</string>
    <string name="table_is_creating">Table construction in progress</string>
    <string name="server_isnot_responded">No confirmation from the server</string>
    <string name="remains_data_updated">Stock data updated</string>
    <string name="scripts_isnot_found">No client scripts available</string>
    <string name="select_variant">Choose an option</string>
    <string name="doc_type">Document Type</string>
    <string name="select_for_open">Select to open Napoleon.</string>
    <string name="waiting">Expectation</string>
    <string name="vibration">Vibration</string>
    <string name="rotate_screen">Screen rotation</string>
    <string name="autostart">Autostart</string>
    <string name="service">Service</string>
    <string name="print">Print</string>
    <string name="script_off">Script disabled</string>
    <string name="remove_visit_older">Delete visits older</string>
    <string name="docs_for_period">Documents for period, months</string>
    <string name="on_line_ip">On-Line IP</string>
    <string name="org_name">Name of organization</string>
    <string name="set_period">Set period</string>
    <string name="contractor">Contractor</string>
    <string name="by_date_created">by creation date</string>
    <string name="by_item">by item</string>
    <string name="all">&lt;all&gt;</string>
    <string name="begin">begin</string>
    <string name="end">end</string>
    <string name="background_send">Background transfer</string>
    <string name="interval">Interval, min.</string>
    <string name="camera_resolution">Camera resolution</string>
    <string name="autofocus">Autofocus</string>
    <string name="safe_photo_on_sdcard">Save photos of visits on a memory card</string>
    <string name="use_inner_app_for_photo">Take pictures with a standard camera</string>
    <string name="columns">Columns</string>
    <string name="clmn_2">Column 2</string>
    <string name="clmn_3">Column 3</string>
    <string name="code_sku">Item Code</string>
    <string name="check_remains">Check stocks</string>
    <string name="complete_story">Complicated Sales History</string>
    <string name="show_packs_in_order">Show packages in document</string>
    <string name="use_price_mover">Movement by price in the product card</string>
    <string name="organization">Organization</string>
    <string name="newDoc">Create a new document</string>
    <string name="nav_type">Navigation type</string>
    <string name="prezent_path_hint">Presentation folder path</string>
	<string name="active_update_price">Use background sync to get stock balances</string>
    <string name="price_level">Price nesting</string>
    <string name="Show_folders">Show folders</string>
    <string name="Show_price_names">Show product name</string>
    <string name="Show_present_in_price">Show presentation in product card</string>
    <string name="Show_daily_sales">Display sales by group</string>
    <string name="Clients_and_goods">Clients and goods</string>
    <string name="keep_away_in_order">Do not turn off the screen during the order</string>
    <string name="count_lines">Number of lines</string>
    <string name="price_qty_title">Qty</string>
    <string name="wifi_presentation">Receive presentation over Wi-Fi only</string>
    <string name="run_from_manager">Launch from mobile manager</string>
</resources>