<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:background="@drawable/list_selector" >
    
     <TextView
         android:id="@+id/tvName"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_weight="1"
         android:layout_marginBottom="1dp"
         android:layout_marginRight="1dp"
         android:background="@color/white"
         android:paddingLeft="3dp"
         android:text="@string/caption"
         android:textColor="@color/black"
         android:textSize="16sp"/>

     <TextView
         android:id="@+id/tvQty"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_weight="0"
         android:background="@color/white"
         android:minWidth="80dp"
         android:gravity="right"
         android:layout_marginBottom="1dp"
         android:layout_marginRight="1dp"
         android:paddingLeft="2dp"
         android:paddingRight="2dp"
         android:text="@string/qty"
         android:textColor="@color/black" 
         android:textSize="16sp"/>

     <TextView
         android:id="@+id/tvCost"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_weight="0"
         android:background="@color/white"
         android:minWidth="80dp"
         android:gravity="right"
         android:layout_marginBottom="1dp"
         android:layout_marginRight="1dp"
         android:paddingRight="3dp"
         android:text="@string/cost"
         android:textColor="@color/black"
         android:textSize="16sp"
         />
     
     <TextView
         android:id="@+id/tvSum"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_weight="0"
         android:background="@color/white"
         android:minWidth="80dp"
         android:gravity="right"
         android:layout_marginBottom="1dp"
         android:paddingRight="3dp"
         android:text="@string/sum"
         android:textColor="@color/black"
         android:textSize="16sp"
         />
    
</LinearLayout>
