<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#80ffcc"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="5dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tvOrgInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:text="@string/organization"
            android:textColor="#000000"
            android:textSize="18sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/llTaskBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/footer"
        android:padding="7dp" >

        <ImageButton
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:contentDescription="@string/send"
            android:src="@drawable/send"/>
        
        <ImageButton
            android:id="@+id/btnDel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:contentDescription="@string/newDoc"
            android:src="@drawable/del_all" />
    </LinearLayout>

</LinearLayout>